--- a/blogs/api/package.json
+++ b/blogs/api/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.2.2",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.5",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
