--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongoose": "^6.1.9",
     "next": "12.0.9",
     "node-sass": "5",
     "react": "17.0.2",
