--- a/e-commerce/.env
+++ b/e-commerce/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://austiniqer:austiniqer@cluster0.hqlbq.mongodb.net/ecommerce?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://austiniqer:1pyLvudqY8FBGlOz@cluster0.hqlbq.mongodb.net/ecommerce?retryWrites=true&w=majority
