--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "mongoose": "^6.1.9",
     "next": "12.0.9",
     "node-sass": "5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@types/node": "^17.0.13",
