--- a/e-commerce/.env
+++ b/e-commerce/.env
@@ -1,1 +1,4 @@
 MONGO_URL = mongodb+srv://austiniqer:1pyLvudqY8FBGlOz@cluster0.hqlbq.mongodb.net/ecommerce?retryWrites=true&w=majority
+ADMIN_USERNAME = admin
+ADMIN_PASSWORD = admin
+TOKEN = helloworld
