--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^7.6.0",
     "@reduxjs/toolkit": "^1.8.0",
+    "@types/cookie": "^0.4.1",
     "axios": "^0.26.1",
+    "cookie": "^0.4.2",
     "mongoose": "^6.1.9",
     "next": "12.0.9",
     "node-sass": "5",
